// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rendered question flow per literacy register > phase 0 — developer 1`] = `
{
  "literacy": "developer",
  "phase": 0,
  "questions": [
    {
      "help": "This tunes how the rest of the questions are phrased. There is no wrong answer.",
      "id": "p0.literacy",
      "options": [
        {
          "label": "Never written code",
          "value": "none",
        },
        {
          "label": "Some — I've used AI builders or can read code",
          "value": "some",
        },
        {
          "label": "I'm a developer",
          "value": "developer",
        },
      ],
      "prompt": "Coding background?",
      "type": "select",
    },
    {
      "help": "Existing projects are not supported yet — MUSTARD will continue as if starting fresh.",
      "id": "p0.project-type",
      "options": [
        {
          "label": "Brand new — nothing built yet",
          "value": "greenfield",
        },
        {
          "label": "It already exists (not yet supported — continues as new)",
          "value": "brownfield",
        },
      ],
      "prompt": "Greenfield or brownfield?",
      "type": "select",
    },
    {
      "help": "MUSTARD writes setup files tuned to your agent. Pick "undecided" if you are not sure yet.",
      "id": "p0.agent-target",
      "options": [
        {
          "label": "Claude Code",
          "value": "claude-code",
        },
        {
          "label": "Codex",
          "value": "codex",
        },
        {
          "label": "Cursor",
          "value": "cursor",
        },
        {
          "label": "Copilot",
          "value": "copilot",
        },
        {
          "label": "Gemini CLI",
          "value": "gemini-cli",
        },
        {
          "label": "Antigravity",
          "value": "antigravity",
        },
        {
          "label": "Other",
          "value": "other",
        },
        {
          "label": "Undecided",
          "value": "undecided",
        },
      ],
      "prompt": "Target coding agent?",
      "type": "select",
    },
    {
      "help": "You bring your own key. You can run fully local and free via Ollama.",
      "id": "p0.provider",
      "options": [
        {
          "label": "Anthropic (Claude)",
          "value": "anthropic",
        },
        {
          "label": "OpenAI",
          "value": "openai",
        },
        {
          "label": "Google (Gemini)",
          "value": "google",
        },
        {
          "label": "Local models via Ollama",
          "value": "ollama",
        },
      ],
      "prompt": "Provider for MUSTARD’s own inference?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 0 — none 1`] = `
{
  "literacy": "none",
  "phase": 0,
  "questions": [
    {
      "help": "This tunes how the rest of the questions are phrased. There is no wrong answer.",
      "id": "p0.literacy",
      "options": [
        {
          "label": "Never written code",
          "value": "none",
        },
        {
          "label": "Some — I've used AI builders or can read code",
          "value": "some",
        },
        {
          "label": "I'm a developer",
          "value": "developer",
        },
      ],
      "prompt": "How much have you built before?",
      "type": "select",
    },
    {
      "help": "Existing projects are not supported yet — MUSTARD will continue as if starting fresh.",
      "id": "p0.project-type",
      "options": [
        {
          "label": "Brand new — nothing built yet",
          "value": "greenfield",
        },
        {
          "label": "It already exists (not yet supported — continues as new)",
          "value": "brownfield",
        },
      ],
      "prompt": "Are you starting something brand new, or working on a project that already exists?",
      "type": "select",
    },
    {
      "help": "MUSTARD writes setup files tuned to your agent. Pick "undecided" if you are not sure yet.",
      "id": "p0.agent-target",
      "options": [
        {
          "label": "Claude Code",
          "value": "claude-code",
        },
        {
          "label": "Codex",
          "value": "codex",
        },
        {
          "label": "Cursor",
          "value": "cursor",
        },
        {
          "label": "Copilot",
          "value": "copilot",
        },
        {
          "label": "Gemini CLI",
          "value": "gemini-cli",
        },
        {
          "label": "Antigravity",
          "value": "antigravity",
        },
        {
          "label": "Other",
          "value": "other",
        },
        {
          "label": "Undecided",
          "value": "undecided",
        },
      ],
      "prompt": "Which AI coding assistant will you use to build this?",
      "type": "select",
    },
    {
      "help": "You bring your own key. You can run fully local and free via Ollama.",
      "id": "p0.provider",
      "options": [
        {
          "label": "Anthropic (Claude)",
          "value": "anthropic",
        },
        {
          "label": "OpenAI",
          "value": "openai",
        },
        {
          "label": "Google (Gemini)",
          "value": "google",
        },
        {
          "label": "Local models via Ollama",
          "value": "ollama",
        },
      ],
      "prompt": "Which AI service should MUSTARD itself use to ask you questions?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 0 — some 1`] = `
{
  "literacy": "some",
  "phase": 0,
  "questions": [
    {
      "help": "This tunes how the rest of the questions are phrased. There is no wrong answer.",
      "id": "p0.literacy",
      "options": [
        {
          "label": "Never written code",
          "value": "none",
        },
        {
          "label": "Some — I've used AI builders or can read code",
          "value": "some",
        },
        {
          "label": "I'm a developer",
          "value": "developer",
        },
      ],
      "prompt": "How much coding experience do you have?",
      "type": "select",
    },
    {
      "help": "Existing projects are not supported yet — MUSTARD will continue as if starting fresh.",
      "id": "p0.project-type",
      "options": [
        {
          "label": "Brand new — nothing built yet",
          "value": "greenfield",
        },
        {
          "label": "It already exists (not yet supported — continues as new)",
          "value": "brownfield",
        },
      ],
      "prompt": "Is this a fresh start or an existing project?",
      "type": "select",
    },
    {
      "help": "MUSTARD writes setup files tuned to your agent. Pick "undecided" if you are not sure yet.",
      "id": "p0.agent-target",
      "options": [
        {
          "label": "Claude Code",
          "value": "claude-code",
        },
        {
          "label": "Codex",
          "value": "codex",
        },
        {
          "label": "Cursor",
          "value": "cursor",
        },
        {
          "label": "Copilot",
          "value": "copilot",
        },
        {
          "label": "Gemini CLI",
          "value": "gemini-cli",
        },
        {
          "label": "Antigravity",
          "value": "antigravity",
        },
        {
          "label": "Other",
          "value": "other",
        },
        {
          "label": "Undecided",
          "value": "undecided",
        },
      ],
      "prompt": "Which AI coding agent will you use?",
      "type": "select",
    },
    {
      "help": "You bring your own key. You can run fully local and free via Ollama.",
      "id": "p0.provider",
      "options": [
        {
          "label": "Anthropic (Claude)",
          "value": "anthropic",
        },
        {
          "label": "OpenAI",
          "value": "openai",
        },
        {
          "label": "Google (Gemini)",
          "value": "google",
        },
        {
          "label": "Local models via Ollama",
          "value": "ollama",
        },
      ],
      "prompt": "Which model provider will MUSTARD use?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 1 — developer 1`] = `
{
  "literacy": "developer",
  "phase": 1,
  "questions": [
    {
      "help": "A few sentences. Write for a person, not a pitch deck.",
      "id": "p1.why",
      "prompt": "Problem statement: why build this, and who is underserved without it?",
      "type": "editor",
    },
    {
      "id": "p1.name",
      "prompt": "Project name / codename?",
      "type": "text",
    },
    {
      "help": "These become your manifesto. Pick the 8–10 that matter most; you can add your own on the next step.",
      "id": "p1.rules",
      "options": [
        {
          "label": "Stay true to your users",
          "value": "stay-true-to-users",
        },
        {
          "label": "Ship before perfect",
          "value": "ship-before-perfect",
        },
        {
          "label": "Document it or it doesn't exist",
          "value": "document-or-it-didnt-happen",
        },
        {
          "label": "Don't instruct AI about problems you don't understand",
          "value": "dont-instruct-ai-blindly",
        },
        {
          "label": "Choose simple over clever",
          "value": "simple-over-clever",
        },
        {
          "label": "Make it work in small steps",
          "value": "small-steps",
        },
        {
          "label": "Delete more than you add",
          "value": "delete-more-than-you-add",
        },
        {
          "label": "Own every decision the agent makes for you",
          "value": "own-your-decisions",
        },
        {
          "label": "Read the code before you run it",
          "value": "read-before-you-run",
        },
        {
          "label": "Security is not a later problem",
          "value": "security-is-not-later",
        },
        {
          "label": "Keep one source of truth",
          "value": "one-source-of-truth",
        },
        {
          "label": "Name things honestly",
          "value": "name-things-honestly",
        },
        {
          "label": "Fail loudly, never silently",
          "value": "fail-loudly",
        },
        {
          "label": "Test what would hurt to break",
          "value": "test-what-would-hurt",
        },
        {
          "label": "Finish what you start before starting more",
          "value": "finish-before-starting",
        },
        {
          "label": "Write my own",
          "value": "write-my-own",
        },
      ],
      "prompt": "Select the guiding rules for this project.",
      "type": "multiselect",
    },
    {
      "id": "p1.custom-rules",
      "prompt": "Custom rules, one per line.",
      "type": "editor",
    },
    {
      "id": "p1.machine-rules",
      "options": [
        {
          "label": "Docstrings mandatory",
          "value": "docstrings-mandatory",
        },
        {
          "label": "Tests alongside features",
          "value": "tests-alongside-features",
        },
        {
          "label": "No unrequested .md files",
          "value": "no-unrequested-md",
        },
        {
          "label": "Conventional commits",
          "value": "conventional-commits",
        },
        {
          "label": "Typed everywhere",
          "value": "typed-everywhere",
        },
        {
          "label": "No new dependency without asking",
          "value": "no-new-dependency-without-asking",
        },
      ],
      "prompt": "Machine-directed rules to enforce:",
      "type": "multiselect",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 1 — none 1`] = `
{
  "literacy": "none",
  "phase": 1,
  "questions": [
    {
      "help": "A few sentences. Write for a person, not a pitch deck.",
      "id": "p1.why",
      "prompt": "Why does this need to exist, and who is worse off if it doesn't?",
      "type": "editor",
    },
    {
      "id": "p1.name",
      "prompt": "What do you want to call this? A working name is fine.",
      "type": "text",
    },
    {
      "help": "These become your manifesto. Pick the 8–10 that matter most; you can add your own on the next step.",
      "id": "p1.rules",
      "options": [
        {
          "label": "Stay true to your users",
          "value": "stay-true-to-users",
        },
        {
          "label": "Ship before perfect",
          "value": "ship-before-perfect",
        },
        {
          "label": "Document it or it doesn't exist",
          "value": "document-or-it-didnt-happen",
        },
        {
          "label": "Don't instruct AI about problems you don't understand",
          "value": "dont-instruct-ai-blindly",
        },
        {
          "label": "Choose simple over clever",
          "value": "simple-over-clever",
        },
        {
          "label": "Make it work in small steps",
          "value": "small-steps",
        },
        {
          "label": "Delete more than you add",
          "value": "delete-more-than-you-add",
        },
        {
          "label": "Own every decision the agent makes for you",
          "value": "own-your-decisions",
        },
        {
          "label": "Read the code before you run it",
          "value": "read-before-you-run",
        },
        {
          "label": "Security is not a later problem",
          "value": "security-is-not-later",
        },
        {
          "label": "Keep one source of truth",
          "value": "one-source-of-truth",
        },
        {
          "label": "Name things honestly",
          "value": "name-things-honestly",
        },
        {
          "label": "Fail loudly, never silently",
          "value": "fail-loudly",
        },
        {
          "label": "Test what would hurt to break",
          "value": "test-what-would-hurt",
        },
        {
          "label": "Finish what you start before starting more",
          "value": "finish-before-starting",
        },
        {
          "label": "Write my own",
          "value": "write-my-own",
        },
      ],
      "prompt": "Which of these should be rules your project lives by? Pick the ones that matter to you.",
      "type": "multiselect",
    },
    {
      "id": "p1.custom-rules",
      "prompt": "Write your own rules, one per line.",
      "type": "editor",
    },
    {
      "id": "p1.machine-rules",
      "options": [
        {
          "label": "Docstrings mandatory",
          "value": "docstrings-mandatory",
        },
        {
          "label": "Tests alongside features",
          "value": "tests-alongside-features",
        },
        {
          "label": "No unrequested .md files",
          "value": "no-unrequested-md",
        },
        {
          "label": "Conventional commits",
          "value": "conventional-commits",
        },
        {
          "label": "Typed everywhere",
          "value": "typed-everywhere",
        },
        {
          "label": "No new dependency without asking",
          "value": "no-new-dependency-without-asking",
        },
      ],
      "prompt": "Which of these should the AI agent always follow when it writes code for you?",
      "type": "multiselect",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 1 — some 1`] = `
{
  "literacy": "some",
  "phase": 1,
  "questions": [
    {
      "help": "A few sentences. Write for a person, not a pitch deck.",
      "id": "p1.why",
      "prompt": "Why does this need to exist, and who is worse off without it?",
      "type": "editor",
    },
    {
      "id": "p1.name",
      "prompt": "Project name or codename?",
      "type": "text",
    },
    {
      "help": "These become your manifesto. Pick the 8–10 that matter most; you can add your own on the next step.",
      "id": "p1.rules",
      "options": [
        {
          "label": "Stay true to your users",
          "value": "stay-true-to-users",
        },
        {
          "label": "Ship before perfect",
          "value": "ship-before-perfect",
        },
        {
          "label": "Document it or it doesn't exist",
          "value": "document-or-it-didnt-happen",
        },
        {
          "label": "Don't instruct AI about problems you don't understand",
          "value": "dont-instruct-ai-blindly",
        },
        {
          "label": "Choose simple over clever",
          "value": "simple-over-clever",
        },
        {
          "label": "Make it work in small steps",
          "value": "small-steps",
        },
        {
          "label": "Delete more than you add",
          "value": "delete-more-than-you-add",
        },
        {
          "label": "Own every decision the agent makes for you",
          "value": "own-your-decisions",
        },
        {
          "label": "Read the code before you run it",
          "value": "read-before-you-run",
        },
        {
          "label": "Security is not a later problem",
          "value": "security-is-not-later",
        },
        {
          "label": "Keep one source of truth",
          "value": "one-source-of-truth",
        },
        {
          "label": "Name things honestly",
          "value": "name-things-honestly",
        },
        {
          "label": "Fail loudly, never silently",
          "value": "fail-loudly",
        },
        {
          "label": "Test what would hurt to break",
          "value": "test-what-would-hurt",
        },
        {
          "label": "Finish what you start before starting more",
          "value": "finish-before-starting",
        },
        {
          "label": "Write my own",
          "value": "write-my-own",
        },
      ],
      "prompt": "Which team rules should apply?",
      "type": "multiselect",
    },
    {
      "id": "p1.custom-rules",
      "prompt": "Write your own rules, one per line.",
      "type": "editor",
    },
    {
      "id": "p1.machine-rules",
      "options": [
        {
          "label": "Docstrings mandatory",
          "value": "docstrings-mandatory",
        },
        {
          "label": "Tests alongside features",
          "value": "tests-alongside-features",
        },
        {
          "label": "No unrequested .md files",
          "value": "no-unrequested-md",
        },
        {
          "label": "Conventional commits",
          "value": "conventional-commits",
        },
        {
          "label": "Typed everywhere",
          "value": "typed-everywhere",
        },
        {
          "label": "No new dependency without asking",
          "value": "no-new-dependency-without-asking",
        },
      ],
      "prompt": "Which machine rules should the agent enforce?",
      "type": "multiselect",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 2 — developer 1`] = `
{
  "literacy": "developer",
  "phase": 2,
  "questions": [
    {
      "help": "Just tell the story. We'll pull out the actors and moving parts for you.",
      "id": "p2.capture",
      "prompt": "Describe the primary end-to-end user flow on first use.",
      "type": "editor",
    },
    {
      "help": "Just the starting point — you can change your mind later.",
      "id": "p2.ui.approach",
      "options": [
        {
          "label": "Sketch the screens first (paper or a tool like Figma)",
          "value": "sketch",
        },
        {
          "label": "Use a component library (e.g. shadcn, MUI)",
          "value": "component-library",
        },
        {
          "label": "Generate a first pass with an AI UI tool (e.g. v0)",
          "value": "ai-ui",
        },
        {
          "label": "No plan yet — decide later",
          "value": "none",
        },
      ],
      "prompt": "UI approach?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 2 — none 1`] = `
{
  "literacy": "none",
  "phase": 2,
  "questions": [
    {
      "help": "Just tell the story. We'll pull out the actors and moving parts for you.",
      "id": "p2.capture",
      "prompt": "Walk me through what someone does with this, start to finish, the first time they use it. Plain language — don't worry about being technical.",
      "type": "editor",
    },
    {
      "help": "Just the starting point — you can change your mind later.",
      "id": "p2.ui.approach",
      "options": [
        {
          "label": "Sketch the screens first (paper or a tool like Figma)",
          "value": "sketch",
        },
        {
          "label": "Use a component library (e.g. shadcn, MUI)",
          "value": "component-library",
        },
        {
          "label": "Generate a first pass with an AI UI tool (e.g. v0)",
          "value": "ai-ui",
        },
        {
          "label": "No plan yet — decide later",
          "value": "none",
        },
      ],
      "prompt": "How do you want to design the screens?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 2 — some 1`] = `
{
  "literacy": "some",
  "phase": 2,
  "questions": [
    {
      "help": "Just tell the story. We'll pull out the actors and moving parts for you.",
      "id": "p2.capture",
      "prompt": "Walk me through a first-time user’s journey with this, start to finish.",
      "type": "editor",
    },
    {
      "help": "Just the starting point — you can change your mind later.",
      "id": "p2.ui.approach",
      "options": [
        {
          "label": "Sketch the screens first (paper or a tool like Figma)",
          "value": "sketch",
        },
        {
          "label": "Use a component library (e.g. shadcn, MUI)",
          "value": "component-library",
        },
        {
          "label": "Generate a first pass with an AI UI tool (e.g. v0)",
          "value": "ai-ui",
        },
        {
          "label": "No plan yet — decide later",
          "value": "none",
        },
      ],
      "prompt": "How will you approach the UI?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 3 — developer 1`] = `
{
  "literacy": "developer",
  "phase": 3,
  "questions": [
    {
      "help": "Soft delete keeps a hidden copy you can restore; hard delete removes it for good.",
      "id": "p3.retention",
      "options": [
        {
          "label": "Yes — keep it and allow it to be restored (soft delete)",
          "value": "recoverable",
        },
        {
          "label": "Keep it, but hidden and not restorable in-app (archive)",
          "value": "archived",
        },
        {
          "label": "No — remove it permanently (hard delete)",
          "value": "hard_delete",
        },
      ],
      "prompt": "Delete semantics — soft delete, archive, or hard delete?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 3 — none 1`] = `
{
  "literacy": "none",
  "phase": 3,
  "questions": [
    {
      "help": "Soft delete keeps a hidden copy you can restore; hard delete removes it for good.",
      "id": "p3.retention",
      "options": [
        {
          "label": "Yes — keep it and allow it to be restored (soft delete)",
          "value": "recoverable",
        },
        {
          "label": "Keep it, but hidden and not restorable in-app (archive)",
          "value": "archived",
        },
        {
          "label": "No — remove it permanently (hard delete)",
          "value": "hard_delete",
        },
      ],
      "prompt": "When someone deletes something, should they be able to get it back later?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 3 — some 1`] = `
{
  "literacy": "some",
  "phase": 3,
  "questions": [
    {
      "help": "Soft delete keeps a hidden copy you can restore; hard delete removes it for good.",
      "id": "p3.retention",
      "options": [
        {
          "label": "Yes — keep it and allow it to be restored (soft delete)",
          "value": "recoverable",
        },
        {
          "label": "Keep it, but hidden and not restorable in-app (archive)",
          "value": "archived",
        },
        {
          "label": "No — remove it permanently (hard delete)",
          "value": "hard_delete",
        },
      ],
      "prompt": "When a record is deleted, should it be recoverable?",
      "type": "select",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 4 — developer 1`] = `
{
  "literacy": "developer",
  "phase": 4,
  "questions": [
    {
      "id": "p4.run-target",
      "options": [
        {
          "label": "In a web browser",
          "value": "web",
        },
        {
          "label": "As a phone app",
          "value": "mobile",
        },
        {
          "label": "Both web and phone",
          "value": "both",
        },
        {
          "label": "As a desktop app",
          "value": "desktop",
        },
        {
          "label": "From the command line",
          "value": "cli",
        },
        {
          "label": "It's an API — no screens of its own",
          "value": "api",
        },
      ],
      "prompt": "Primary run target?",
      "type": "select",
    },
    {
      "id": "p4.scale",
      "options": [
        {
          "label": "Just me",
          "value": "just-me",
        },
        {
          "label": "Tens of people",
          "value": "tens",
        },
        {
          "label": "Hundreds",
          "value": "hundreds",
        },
        {
          "label": "Thousands",
          "value": "thousands",
        },
        {
          "label": "More than that",
          "value": "more",
        },
      ],
      "prompt": "Year-one scale?",
      "type": "select",
    },
    {
      "help": "Regulated means health, finance, or anything about children.",
      "id": "p4.sensitivity",
      "options": [
        {
          "label": "Nothing private — public information only",
          "value": "public",
        },
        {
          "label": "Personal details (names, emails, their own content)",
          "value": "personal",
        },
        {
          "label": "Regulated data (health, finance, or children)",
          "value": "regulated",
        },
      ],
      "prompt": "Data sensitivity class?",
      "type": "select",
    },
    {
      "help": "This affects speed and where data is allowed to live.",
      "id": "p4.user-location",
      "options": [
        {
          "label": "Mostly one country",
          "value": "one-country",
        },
        {
          "label": "One region (e.g. Europe, North America)",
          "value": "one-region",
        },
        {
          "label": "All over the world",
          "value": "global",
        },
      ],
      "prompt": "User geography?",
      "type": "select",
    },
    {
      "help": "Profile pictures count. So do PDFs, voice notes, and CSV imports.",
      "id": "p4.uploads",
      "prompt": "User-generated file uploads?",
      "type": "confirm",
    },
    {
      "id": "p4.concurrent",
      "options": [
        {
          "label": "No — everyone has their own stuff",
          "value": "never",
        },
        {
          "label": "Sometimes — e.g. shared documents or bookings",
          "value": "sometimes",
        },
        {
          "label": "Constantly — it's the point of the product",
          "value": "core",
        },
      ],
      "prompt": "Concurrent write contention on shared records?",
      "type": "select",
    },
    {
      "help": "Subscriptions, one-off purchases, or paying other users all count.",
      "id": "p4.payments",
      "prompt": "Payment processing at runtime?",
      "type": "confirm",
    },
    {
      "help": "Password resets, receipts, reminders, "someone replied" alerts.",
      "id": "p4.email",
      "prompt": "Transactional email / push notifications?",
      "type": "confirm",
    },
    {
      "help": "Daily digests, cleanups, reminders that fire on their own, imports that run overnight.",
      "id": "p4.background",
      "prompt": "Background workers / scheduled jobs?",
      "type": "confirm",
    },
    {
      "help": "Chatbots, summaries, image generation, smart search — anything that asks an AI model a question live.",
      "id": "p4.inference",
      "prompt": "Runtime model inference?",
      "type": "confirm",
    },
    {
      "id": "p4.auth",
      "options": [
        {
          "label": "No sign-in at all",
          "value": "none",
        },
        {
          "label": "Email and password",
          "value": "email-password",
        },
        {
          "label": "A login link sent to their email",
          "value": "magic-link",
        },
        {
          "label": "Sign in with Google / Apple / etc.",
          "value": "social",
        },
        {
          "label": "Both a password and social sign-in",
          "value": "both",
        },
      ],
      "prompt": "Auth model?",
      "type": "select",
    },
    {
      "help": "Think a note-taking app on a plane, or a field-work app with no signal.",
      "id": "p4.offline",
      "prompt": "Offline-first / sync?",
      "type": "confirm",
    },
    {
      "help": "A search box that looks inside what users have created, not just filtering a short list.",
      "id": "p4.search",
      "prompt": "Full-text search over content?",
      "type": "confirm",
    },
    {
      "help": "A back office to ban a user, remove a post, or fix bad data.",
      "id": "p4.admin",
      "prompt": "Admin / moderation surface with roles?",
      "type": "confirm",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 4 — none 1`] = `
{
  "literacy": "none",
  "phase": 4,
  "questions": [
    {
      "id": "p4.run-target",
      "options": [
        {
          "label": "In a web browser",
          "value": "web",
        },
        {
          "label": "As a phone app",
          "value": "mobile",
        },
        {
          "label": "Both web and phone",
          "value": "both",
        },
        {
          "label": "As a desktop app",
          "value": "desktop",
        },
        {
          "label": "From the command line",
          "value": "cli",
        },
        {
          "label": "It's an API — no screens of its own",
          "value": "api",
        },
      ],
      "prompt": "Where will people use this?",
      "type": "select",
    },
    {
      "id": "p4.scale",
      "options": [
        {
          "label": "Just me",
          "value": "just-me",
        },
        {
          "label": "Tens of people",
          "value": "tens",
        },
        {
          "label": "Hundreds",
          "value": "hundreds",
        },
        {
          "label": "Thousands",
          "value": "thousands",
        },
        {
          "label": "More than that",
          "value": "more",
        },
      ],
      "prompt": "Roughly how many people do you expect to use this in the first year?",
      "type": "select",
    },
    {
      "help": "Regulated means health, finance, or anything about children.",
      "id": "p4.sensitivity",
      "options": [
        {
          "label": "Nothing private — public information only",
          "value": "public",
        },
        {
          "label": "Personal details (names, emails, their own content)",
          "value": "personal",
        },
        {
          "label": "Regulated data (health, finance, or children)",
          "value": "regulated",
        },
      ],
      "prompt": "What kind of information will this hold about people?",
      "type": "select",
    },
    {
      "help": "This affects speed and where data is allowed to live.",
      "id": "p4.user-location",
      "options": [
        {
          "label": "Mostly one country",
          "value": "one-country",
        },
        {
          "label": "One region (e.g. Europe, North America)",
          "value": "one-region",
        },
        {
          "label": "All over the world",
          "value": "global",
        },
      ],
      "prompt": "Where in the world are the people who will use this?",
      "type": "select",
    },
    {
      "help": "Profile pictures count. So do PDFs, voice notes, and CSV imports.",
      "id": "p4.uploads",
      "prompt": "Will people using your app upload photos, videos, or files?",
      "type": "confirm",
    },
    {
      "id": "p4.concurrent",
      "options": [
        {
          "label": "No — everyone has their own stuff",
          "value": "never",
        },
        {
          "label": "Sometimes — e.g. shared documents or bookings",
          "value": "sometimes",
        },
        {
          "label": "Constantly — it's the point of the product",
          "value": "core",
        },
      ],
      "prompt": "Will two different people ever change the same thing at the same time?",
      "type": "select",
    },
    {
      "help": "Subscriptions, one-off purchases, or paying other users all count.",
      "id": "p4.payments",
      "prompt": "Will people pay money through the app?",
      "type": "confirm",
    },
    {
      "help": "Password resets, receipts, reminders, "someone replied" alerts.",
      "id": "p4.email",
      "prompt": "Will the app send emails or notifications to people?",
      "type": "confirm",
    },
    {
      "help": "Daily digests, cleanups, reminders that fire on their own, imports that run overnight.",
      "id": "p4.background",
      "prompt": "Does anything need to happen while nobody is using the app?",
      "type": "confirm",
    },
    {
      "help": "Chatbots, summaries, image generation, smart search — anything that asks an AI model a question live.",
      "id": "p4.inference",
      "prompt": "Does the app use AI while people are using it?",
      "type": "confirm",
    },
    {
      "id": "p4.auth",
      "options": [
        {
          "label": "No sign-in at all",
          "value": "none",
        },
        {
          "label": "Email and password",
          "value": "email-password",
        },
        {
          "label": "A login link sent to their email",
          "value": "magic-link",
        },
        {
          "label": "Sign in with Google / Apple / etc.",
          "value": "social",
        },
        {
          "label": "Both a password and social sign-in",
          "value": "both",
        },
      ],
      "prompt": "Do people sign in? And would they expect a "Sign in with Google / Apple" button?",
      "type": "select",
    },
    {
      "help": "Think a note-taking app on a plane, or a field-work app with no signal.",
      "id": "p4.offline",
      "prompt": "Does it need to work with a bad or missing internet connection?",
      "type": "confirm",
    },
    {
      "help": "A search box that looks inside what users have created, not just filtering a short list.",
      "id": "p4.search",
      "prompt": "Will people search through the content in the app?",
      "type": "confirm",
    },
    {
      "help": "A back office to ban a user, remove a post, or fix bad data.",
      "id": "p4.admin",
      "prompt": "Will you need a way to manage users or content behind the scenes?",
      "type": "confirm",
    },
  ],
}
`;

exports[`rendered question flow per literacy register > phase 4 — some 1`] = `
{
  "literacy": "some",
  "phase": 4,
  "questions": [
    {
      "id": "p4.run-target",
      "options": [
        {
          "label": "In a web browser",
          "value": "web",
        },
        {
          "label": "As a phone app",
          "value": "mobile",
        },
        {
          "label": "Both web and phone",
          "value": "both",
        },
        {
          "label": "As a desktop app",
          "value": "desktop",
        },
        {
          "label": "From the command line",
          "value": "cli",
        },
        {
          "label": "It's an API — no screens of its own",
          "value": "api",
        },
      ],
      "prompt": "Where does this run?",
      "type": "select",
    },
    {
      "id": "p4.scale",
      "options": [
        {
          "label": "Just me",
          "value": "just-me",
        },
        {
          "label": "Tens of people",
          "value": "tens",
        },
        {
          "label": "Hundreds",
          "value": "hundreds",
        },
        {
          "label": "Thousands",
          "value": "thousands",
        },
        {
          "label": "More than that",
          "value": "more",
        },
      ],
      "prompt": "Expected scale in year one?",
      "type": "select",
    },
    {
      "help": "Regulated means health, finance, or anything about children.",
      "id": "p4.sensitivity",
      "options": [
        {
          "label": "Nothing private — public information only",
          "value": "public",
        },
        {
          "label": "Personal details (names, emails, their own content)",
          "value": "personal",
        },
        {
          "label": "Regulated data (health, finance, or children)",
          "value": "regulated",
        },
      ],
      "prompt": "How sensitive is the data?",
      "type": "select",
    },
    {
      "help": "This affects speed and where data is allowed to live.",
      "id": "p4.user-location",
      "options": [
        {
          "label": "Mostly one country",
          "value": "one-country",
        },
        {
          "label": "One region (e.g. Europe, North America)",
          "value": "one-region",
        },
        {
          "label": "All over the world",
          "value": "global",
        },
      ],
      "prompt": "Where are your users?",
      "type": "select",
    },
    {
      "help": "Profile pictures count. So do PDFs, voice notes, and CSV imports.",
      "id": "p4.uploads",
      "prompt": "Do users upload media or files?",
      "type": "confirm",
    },
    {
      "id": "p4.concurrent",
      "options": [
        {
          "label": "No — everyone has their own stuff",
          "value": "never",
        },
        {
          "label": "Sometimes — e.g. shared documents or bookings",
          "value": "sometimes",
        },
        {
          "label": "Constantly — it's the point of the product",
          "value": "core",
        },
      ],
      "prompt": "Will two people ever edit the same record at once?",
      "type": "select",
    },
    {
      "help": "Subscriptions, one-off purchases, or paying other users all count.",
      "id": "p4.payments",
      "prompt": "Do you take payments?",
      "type": "confirm",
    },
    {
      "help": "Password resets, receipts, reminders, "someone replied" alerts.",
      "id": "p4.email",
      "prompt": "Do you send email or notifications?",
      "type": "confirm",
    },
    {
      "help": "Daily digests, cleanups, reminders that fire on their own, imports that run overnight.",
      "id": "p4.background",
      "prompt": "Any scheduled or background work?",
      "type": "confirm",
    },
    {
      "help": "Chatbots, summaries, image generation, smart search — anything that asks an AI model a question live.",
      "id": "p4.inference",
      "prompt": "Does anything call an AI model at runtime?",
      "type": "confirm",
    },
    {
      "id": "p4.auth",
      "options": [
        {
          "label": "No sign-in at all",
          "value": "none",
        },
        {
          "label": "Email and password",
          "value": "email-password",
        },
        {
          "label": "A login link sent to their email",
          "value": "magic-link",
        },
        {
          "label": "Sign in with Google / Apple / etc.",
          "value": "social",
        },
        {
          "label": "Both a password and social sign-in",
          "value": "both",
        },
      ],
      "prompt": "How do users sign in?",
      "type": "select",
    },
    {
      "help": "Think a note-taking app on a plane, or a field-work app with no signal.",
      "id": "p4.offline",
      "prompt": "Offline support required?",
      "type": "confirm",
    },
    {
      "help": "A search box that looks inside what users have created, not just filtering a short list.",
      "id": "p4.search",
      "prompt": "Do users search the content?",
      "type": "confirm",
    },
    {
      "help": "A back office to ban a user, remove a post, or fix bad data.",
      "id": "p4.admin",
      "prompt": "Do you need an admin surface?",
      "type": "confirm",
    },
  ],
}
`;
